[package]
  categories = ["development-tools", "development-tools::linters"]
  description = "An opinionated formatting and linting tool for foundry projects"
  edition = "2021"
  keywords = ["foundry", "linting", "formatting"]
  license = "MIT"
  name = "scopelint"
  repository = "https://github.com/ScopeLift/scopelint"
  version = "0.0.18"
  include = ["/src"]

[dependencies]
  clap = { version = "4.4.2", features = ["derive"] }
  colored = "2.0.0"
  once_cell = "1.16.0"
  regex = "1.6.0"
  solang-parser = "0.3.2"
  taplo = "0.12.1"
  walkdir = "2.3.2"
