[package]
  categories = ["development-tools", "development-tools::linters"]
  description = "An opinionated formatting and linting tool for foundry projects"
  edition = "2021"
  include = ["/src"]
  keywords = ["foundry", "linting", "formatting"]
  license = "MIT"
  name = "scopelint"
  repository = "https://github.com/ScopeLift/scopelint"
  version = "0.0.21"

[dependencies]
  clap = { version = "4.4.2", features = ["derive"] }
  colored = "2.0.0"
  globset = "0.4"
  itertools = "0.11.0"
  regex = "1.6.0"
  solang-parser = "0.3.2"
  taplo = "0.13.0"
  toml = "0.8"
  walkdir = "2.3.2"